--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "coupling-graph": "npx madge --extensions js,jsx,ts,tsx,css,md,mdx ./ --exclude '.next|tailwind.config.js|reset.d.ts|prettier.config.js|postcss.config.js|playwright.config.ts|next.config.js|next-env.d.ts|instrumentation.ts|e2e/|README.md|.storybook/|.eslintrc.js' --image graph.svg"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@next/bundle-analyzer": "^13.3.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.3",
@@ -50,6 +51,7 @@
     "class-variance-authority": "^0.6.0",
     "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.259.0",
     "next": "^13.3.0",
     "next-compose-plugins": "^2.2.1",
     "react": "^18.2.0",
